--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@auth/sveltekit": "^1.4.1"
+		"@auth/sveltekit": "^1.4.1",
+		"clsx": "^2.1.1",
+		"tailwind-merge": "^2.4.0",
+		"tailwind-variants": "^0.2.1"
 	}
 }
