--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
 	"type": "module",
 	"dependencies": {
 		"@auth/sveltekit": "^1.4.1",
+		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.408.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
