--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "spotify-couples",
 	"version": "0.0.0",
 	"private": true,
+	"packageManager": "bun@1.1.20",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
