--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.408.0",
 		"mode-watcher": "^0.4.0",
+		"simplex-noise": "^4.0.3",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
