--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
 	"type": "module",
 	"dependencies": {
 		"@auth/sveltekit": "^1.4.1",
-		"bits-ui": "^0.21.12",
+		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.408.0",
-		"mode-watcher": "^0.4.0",
+		"mode-watcher": "^0.4.1",
 		"simplex-noise": "^4.0.3",
+		"svelte-sonner": "^0.3.27",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
