--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,8 @@
 		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
 		"frameworksBackend": {
 			"region": "us-east1",
-			"invoker": "public"
+			"invoker": "public",
+			"secrets": ["AUTH_SECRET", "AUTH_SPOTIFY_ID", "AUTH_SPOTIFY_SECRET"]
 		}
 	}
 }
