--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"firebase": "^10.12.5",
+		"firebase-functions": "^5.0.1",
 		"lucide-svelte": "^0.408.0",
 		"mode-watcher": "^0.4.1",
 		"simplex-noise": "^4.0.3",
