--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,7 +16,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: './.github/setup'
-      - name: Run eslint
-        run: bun lint
       - name: Run SvelteKit check
         run: bun check
+        env:
+          PUBLIC_FIREBASE_API_KEY: ''
+          PUBLIC_FIREBASE_AUTH_DOMAIN: ''
+          PUBLIC_FIREBASE_PROJECT_ID: ''
+          PUBLIC_FIREBASE_STORAGE_BUCKET: ''
+          PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ''
+          PUBLIC_FIREBASE_APP_ID: ''
+          SPOTIFY_CLIENT_ID: ''
+          SPOTIFY_CLIENT_SECRET: ''
+      - name: Run eslint # This must be after check because check does svelte-kit-sync
+        run: bun lint
