--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
 		"dev": "firebase emulators:start",
 		"build": "vite build",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "eslint --fix .",
+		"lint": "eslint --fix --max-warnings 0 .",
 		"prepare": "husky"
 	},
 	"devDependencies": {
@@ -21,7 +20,7 @@
 		"@types/eslint-config-prettier": "^6.11.3",
 		"@types/eslint__js": "^8.42.3",
 		"autoprefixer": "^10.4.19",
-		"eslint": "^9.7.0",
+		"eslint": "^9.9.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.42.0",
 		"husky": "^9.0.11",
@@ -36,16 +35,19 @@
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.5.3",
-		"typescript-eslint": "^7.16.0",
+		"typescript-eslint": "^8.1.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@auth/sveltekit": "^1.4.1",
+		"@spotify/web-api-ts-sdk": "^1.2.0",
+		"arctic": "^2.0.0-next.5",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"firebase": "^10.12.5",
+		"firebase-admin": "^12.3.1",
 		"firebase-functions": "^5.0.1",
+		"lucia": "^3.2.0",
 		"lucide-svelte": "^0.408.0",
 		"mode-watcher": "^0.4.1",
 		"simplex-noise": "^4.0.3",
