--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.5.3",
 		"typescript-eslint": "^8.1.0",
+		"typescript-svelte-plugin": "^0.3.41",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
