--- a/package.json
+++ b/package.json
@@ -12,48 +12,48 @@
 		"prepare": "husky"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.7.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/enhanced-img": "^0.3.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@eslint/js": "^9.13.0",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/enhanced-img": "^0.3.10",
+		"@sveltejs/kit": "^2.7.3",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint-config-prettier": "^6.11.3",
 		"@types/eslint__js": "^8.42.3",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^9.9.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.42.0",
-		"husky": "^9.0.11",
-		"lint-staged": "^15.2.7",
-		"postcss": "^8.4.38",
-		"prettier": "^3.3.2",
-		"prettier-plugin-organize-imports": "^4.0.0",
-		"prettier-plugin-svelte": "^3.2.5",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"svelte": "^4.2.18",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.4",
-		"tslib": "^2.4.1",
-		"typescript": "^5.5.3",
-		"typescript-eslint": "^8.1.0",
-		"typescript-svelte-plugin": "^0.3.41",
-		"vite": "^5.0.3"
+		"eslint-plugin-svelte": "^2.46.0",
+		"husky": "^9.1.6",
+		"lint-staged": "^15.2.10",
+		"postcss": "^8.4.47",
+		"prettier": "^3.3.3",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-svelte": "^3.2.7",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"svelte": "^5.1.2",
+		"svelte-check": "^4.0.5",
+		"tailwindcss": "^3.4.14",
+		"tslib": "^2.8.0",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.11.0",
+		"typescript-svelte-plugin": "^0.3.42",
+		"vite": "^5.4.10"
 	},
 	"type": "module",
 	"dependencies": {
 		"@spotify/web-api-ts-sdk": "^1.2.0",
-		"arctic": "^2.0.0-next.5",
+		"arctic": "^2.0.1",
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
-		"firebase": "^10.12.5",
-		"firebase-admin": "^12.3.1",
-		"firebase-functions": "^5.0.1",
-		"lucia": "^3.2.0",
+		"firebase": "^10.14.1",
+		"firebase-admin": "^12.7.0",
+		"firebase-functions": "^5.1.1",
+		"lucia": "^3.2.2",
 		"lucide-svelte": "^0.408.0",
 		"mode-watcher": "^0.4.1",
 		"simplex-noise": "^4.0.3",
-		"svelte-sonner": "^0.3.27",
-		"tailwind-merge": "^2.4.0",
+		"svelte-sonner": "^0.3.28",
+		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1"
 	}
 }
