--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.11.0",
 		"typescript-svelte-plugin": "^0.3.42",
-		"vite": "^5.4.10"
+		"vite": "^5.4.10",
+		"@types/bun": "latest"
 	},
 	"type": "module",
 	"dependencies": {
