--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
 	"packageManager": "bun@1.1.20",
 	"scripts": {
 		"dev": "firebase emulators:start",
+		"shell": "firebase functions:shell",
 		"build": "vite build",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"format": "prettier --write .",
 		"lint": "eslint --fix --max-warnings 0 .",
-		"prepare": "husky"
+		"prepare": "husky || exit 0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
@@ -30,17 +31,18 @@
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"svelte": "^5.1.2",
+		"svelte": "^5.1.4",
 		"svelte-check": "^4.0.5",
 		"tailwindcss": "^3.4.14",
 		"tslib": "^2.8.0",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.11.0",
+		"typescript-eslint": "^8.12.2",
 		"typescript-svelte-plugin": "^0.3.42",
 		"vite": "^5.4.10",
 		"@types/bun": "latest"
 	},
 	"type": "module",
+	"main": "./src/functions/index.js",
 	"dependencies": {
 		"@spotify/web-api-ts-sdk": "^1.2.0",
 		"arctic": "^2.0.1",
@@ -48,7 +50,7 @@
 		"clsx": "^2.1.1",
 		"firebase": "^10.14.1",
 		"firebase-admin": "^12.7.0",
-		"firebase-functions": "^5.1.1",
+		"firebase-functions": "^6.1.0",
 		"lucia": "^3.2.2",
 		"lucide-svelte": "^0.453.0",
 		"mode-watcher": "^0.4.1",
