--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+	"$schema": "http://json.schemastore.org/tsconfig",
 	"extends": "./.svelte-kit/tsconfig.json",
 	"include": [
 		"tailwind.config.ts",
@@ -12,7 +13,8 @@
 		".svelte-kit/non-ambient.d.ts",
 		".svelte-kit/types/**/$types.d.ts",
 		"eslint.config.js",
-		"lint-staged.config.js"
+		"lint-staged.config.js",
+		"src/functions/index.js"
 	],
 	"compilerOptions": {
 		"allowJs": true,
