Switch to Typescript and Rollup for functions

--- a/firebase.json
+++ b/firebase.json
@@ -17,6 +17,10 @@
 	},
 	"functions": {
 		"runtime": "nodejs20",
-		"source": "packages/functions"
+		"source": "packages/functions",
+		"predeploy": [
+			"cd packages/functions && npx rollup --config rollup.config.js",
+			"cd packages/functions && npm prune --omit=dev"
+		]
 	}
 }
