--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-svelte": "^3.2.8",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"@spotify-couples/core": "workspace:*",
+		"@spotify-couples/core": "0.0.0",
 		"turbo": "^2.3.3",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.15.0"
