--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -9,7 +9,7 @@
 		"check": "tsc --noEmit"
 	},
 	"devDependencies": {
-		"@spotify-couples/core": "workspace:*",
+		"@spotify-couples/core": "0.0.0",
 		"rollup": "^4.28.0",
 		"typescript": "^5.6.3"
 	},
@@ -18,7 +18,9 @@
 	"dependencies": {
 		"@rollup/plugin-commonjs": "^28.0.1",
 		"@rollup/plugin-node-resolve": "^15.3.0",
+		"@rollup/plugin-typescript": "^12.1.1",
 		"firebase-admin": "^12.7.0",
-		"firebase-functions": "^6.1.0"
+		"firebase-functions": "^6.1.0",
+		"lucia": "^3.2.2"
 	}
 }
