--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -20,7 +20,7 @@
 		"typescript": "^5.6.3",
 		"typescript-svelte-plugin": "^0.3.43",
 		"vite": "^5.4.11",
-		"@spotify-couples/core": "workspace:*"
+		"@spotify-couples/core": "0.0.0"
 	},
 	"type": "module",
 	"dependencies": {
