--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -19,8 +19,10 @@
 		"@rollup/plugin-commonjs": "^28.0.1",
 		"@rollup/plugin-node-resolve": "^15.3.0",
 		"@rollup/plugin-typescript": "^12.1.1",
+		"@spotify/web-api-ts-sdk": "^1.2.0",
+		"arctic": "^2.3.0",
 		"firebase-admin": "^12.7.0",
-		"firebase-functions": "^6.1.0",
+		"firebase-functions": "^6.1.1",
 		"lucia": "^3.2.2"
 	}
 }
