Force users to re-authenticate with Spotify
Users are now force to re-authenticate with Spotify when their access
with Spotify (not necessarily our site) is invalid

--- a/firebase.json
+++ b/firebase.json
@@ -18,6 +18,7 @@
 	"functions": {
 		"runtime": "nodejs20",
 		"source": "packages/functions",
+		"ignore": ["rollup.config.js", "tsconfig.json", "**/*.ts", "**/*.map"],
 		"predeploy": [
 			"cd packages/functions && npx rollup --config rollup.config.js",
 			"cd packages/functions && npm uninstall @spotify-couples/core"
