Simplify Firebase environment setup
This removes the need for spotify-couples-dev, and manually setting
environment in the .env file. Now, it is inferred based on Firebase
defaults (which are set by the backend, but can be passed to the
frontend by Vite declarations).

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "spotify-couples-dev",
+    "default": "demo-spotify-couples",
     "prod": "spotify-couples"
   }
 }
