--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint": "^9.15.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
+		"firebase-tools": "^14.2.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.2.10",
 		"prettier": "^3.3.3",
