--- a/packages/site/turbo.json
+++ b/packages/site/turbo.json
@@ -5,13 +5,7 @@
 		"check": {
 			"dependsOn": ["dependencies"],
 			"env": [
-				"PUBLIC_FIREBASE_API_KEY",
-				"PUBLIC_FIREBASE_AUTH_DOMAIN",
-				"PUBLIC_FIREBASE_PROJECT_ID",
-				"PUBLIC_FIREBASE_STORAGE_BUCKET",
-				"PUBLIC_FIREBASE_MESSAGING_SENDER_ID",
-				"PUBLIC_FIREBASE_APP_ID",
-				"FIRESTORE_EMULATOR_HOST",
+				"__FIREBASE_DEFAULTS__",
 				"SPOTIFY_USER_ID",
 				"SPOTIFY_CLIENT_ID",
 				"SPOTIFY_CLIENT_SECRET"
