--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-	"name": "spotify-couples",
-	"version": "0.0.0",
-	"private": true,
-	"packageManager": "bun@1.1.20",
-	"workspaces": [
-		"packages/*"
-	],
-	"scripts": {
-		"dev": "firebase emulators:start",
-		"shell": "firebase functions:shell",
-		"format": "prettier --write .",
-		"check": "tsc --noEmit",
-		"lint": "eslint --fix --max-warnings 0 ."
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.15.0",
-		"@types/bun": "latest",
-		"@types/eslint-config-prettier": "^6.11.3",
-		"@types/eslint__js": "^8.42.3",
-		"eslint": "^9.15.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.0",
-		"firebase-tools": "^14.2.0",
-		"husky": "^9.1.7",
-		"lint-staged": "^15.2.10",
-		"prettier": "^3.3.3",
-		"prettier-plugin-organize-imports": "^4.1.0",
-		"prettier-plugin-svelte": "^3.2.8",
-		"prettier-plugin-tailwindcss": "^0.6.8",
-		"@spotify-couples/core": "0.0.0",
-		"turbo": "^2.3.3",
-		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.15.0"
-	},
-	"type": "module"
+  "name": "spotify-couples",
+  "version": "0.0.0",
+  "private": true,
+  "packageManager": "bun@1.1.20",
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "dev": "firebase emulators:start",
+    "shell": "firebase functions:shell",
+    "format": "prettier --write .",
+    "check": "tsc --noEmit",
+    "lint": "eslint --fix --max-warnings 0 ."
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "@types/bun": "latest",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.46.0",
+    "firebase-tools": "^14.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-svelte": "^3.2.8",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "@spotify-couples/core": "0.0.0",
+    "turbo": "^2.3.3",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0"
+  },
+  "type": "module",
+  "trustedDependencies": [
+    "protobufjs"
+  ]
 }
