Change "prod" environment to "production"
This is more consistent with the naming scheme in Firebase

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
     "default": "demo-spotify-couples",
-    "prod": "spotify-couples"
+    "production": "spotify-couples"
   }
 }
