--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -26,13 +26,13 @@
 	"dependencies": {
 		"@spotify/web-api-ts-sdk": "^1.2.0",
 		"arctic": "^2.3.0",
-		"bits-ui": "^0.21.16",
+		"bits-ui": "0.22.0",
 		"clsx": "^2.1.1",
 		"firebase": "^10.14.1",
 		"firebase-admin": "^12.7.0",
 		"firebase-functions": "^6.1.1",
 		"lucia": "^3.2.2",
-		"lucide-svelte": "^0.453.0",
+		"lucide-svelte": "^0.501.0",
 		"mode-watcher": "^0.5.0",
 		"simplex-noise": "^4.0.3",
 		"svelte-sonner": "^0.3.28",
