--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -49,6 +49,7 @@ max_client_conn = 100
 # Specifies an ordered list of schema files that describe your database.
 # Supports glob patterns relative to supabase directory: "./schemas/*.sql"
 schema_paths = [
+		"./schemas/extensions.sql",
 		"./schemas/profiles.sql",
 		"./schemas/*.sql"
 ]
