--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"packageManager": "bun@1.1.20",
 	"scripts": {
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
+		"check": "supabase gen types --local > src/lib/database/schema.d.ts && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.3.1",
@@ -25,6 +25,8 @@
 	"type": "module",
 	"dependencies": {
 		"@spotify/web-api-ts-sdk": "^1.2.0",
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.49.4",
 		"arctic": "^2.3.0",
 		"bits-ui": "0.22.0",
 		"clsx": "^2.1.1",
