--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -19,8 +19,7 @@
 		"tslib": "^2.8.1",
 		"typescript": "^5.6.3",
 		"typescript-svelte-plugin": "^0.3.43",
-		"vite": "^5.4.11",
-		"@spotify-couples/core": "0.0.0"
+		"vite": "^5.4.11"
 	},
 	"type": "module",
 	"dependencies": {
@@ -30,9 +29,6 @@
 		"arctic": "^2.3.0",
 		"bits-ui": "0.22.0",
 		"clsx": "^2.1.1",
-		"firebase": "^10.14.1",
-		"firebase-admin": "^12.7.0",
-		"firebase-functions": "^6.1.1",
 		"lucia": "^3.2.2",
 		"lucide-svelte": "^0.501.0",
 		"mode-watcher": "^0.5.0",
