Use a separate table for pairings
This removes them from the profile. There is an argument about 3NF for
doing this, but the real reason is that it will allow us to remove
pairings entirely in the future

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -51,6 +51,7 @@ max_client_conn = 100
 schema_paths = [
 		"./schemas/extensions.sql",
 		"./schemas/schemas.sql",
+		"./schemas/pairings.sql",
 		"./schemas/profiles.sql",
 		"./schemas/*.sql"
 ]
