Add the ability to read Spotify data via Supabase
All queries are done via save_..._details. This works for albums,
tracks, and artists. Fetching one will automatically fetch the rest
(i.e., fetching a track fetches its album and artists, fetching an album
fetches the artists and tracks in it, etc)

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -52,6 +52,9 @@ schema_paths = [
 		"./schemas/extensions.sql",
 		"./schemas/schemas.sql",
 		"./schemas/pairings.sql",
+		"./schemas/artists.sql",
+		"./schemas/albums.sql",
+		"./schemas/tracks.sql",
 		"./schemas/*.sql"
 ]
 
